# secretsign

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/net/oneunified/secretsign/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/net/oneunified/secretsign/: ActivityMain.java  ActivityMainFragment.java
app/src/main/res/layout/: content_activity_main.xml  fragment_activity_main.xml
app/src/main/res/menu/: menu_activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/net/oneunified/secretsign/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
